[233451] Replacing all "Remote*" diff by their local counterparts and an "isRemote()" method on DiffElement.